# Ray-Tracing

./: .gitgnore  .gitignore  CMakeLists.txt  README.md  a.out  image.ppm
basic ray tracing/: main.c  output  pout  practice.c
images/: raytraced_image.ppm
src/: a.out  camera.h  color.h  hit_objects.h  image.ppm  interval.h  it_hit.h  material.h  objects.h  ray.cpp  ray.h  ray_tracer  raytracing.h  rtweekend.h  vec3.cpp  vec3.h
